# Movie-Rating-System

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  test.py
alembic/: env.py
alembic/versions/: 3d3fea9c75a3_your_message_here.py  48a4b7df8bd4_your_message_here.py  5b44b476c289_initial.py  6718332a3703_your_message_here.py  70fa72df687e_merge_migration_heads.py  816285f0d2f5_your_message_here.py  a3228949a02b_create_movie_tables.py  b0aee7f25628_your_message_here.py  b8cf3d788230_your_message_here.py
app/: logging_config.py  main.py
app/api/: exception_handler.py
app/api/controller/: movie_controller.py
app/api/schemas/: movie.py  rating.py
app/db/: session.py
app/exceptions/: base.py  movie_exceptions.py
app/models/: director.py  genre.py  movie.py  movie_genres.py  rating.py
app/repositories/: director_repository.py  movie_repository.py
app/services/: movie_service.py
scripts/: seed_check.py  seeddb.sql
