[tool.poetry]
name = "movierating"
version = "0.1.0"
description = ""
authors = ["Raha Kariminia", "Fatemeh Keshavarzi"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
sqlalchemy = "^2.0.23"
psycopg2-binary = "^2.9.9"
alembic = "^1.12.1"
pydantic = "^2.5.1"
pandas = "^2.1.3"
python-dotenv = "^1.2.1"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
httpx = "^0.28.1"
isort = "^6.0.0"
flake8 = "^6.1.0"
